# flasky

./: .env.docker.example  .env.docker.production.example  .env.local.example  .env.vagrant.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deployment_on_dockerhub.yml  tests.yml
app/: __init__.py
app/modules/auth/: models.py  routes.py  seeders.py
app/modules/auth/tests/: test_unit.py
app/modules/profile/: models.py  routes.py
app/modules/public/: routes.py
app/public/: routes.py
app/templates/: base_template.html
docker/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.ssl.yml  docker-compose.prod.watchtower.yml  docker-compose.prod.yml
docker/images/: Dockerfile.base  Dockerfile.prod
docker/makefiles/: Makefile.env
nginx/: nginx.dev.conf  nginx.prod.conf
rosemary/: __main__.py  cli.py
rosemary/commands/: locust.py
